# hex-online

./: .gitignore  README.md  index.html
.github/workflows/: build-client.yml
client/: .prettierrc  package-lock.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js
client/hex-emscripten/: a.out.js  a.out.wasm
client/hex-wasm/: Cargo.toml
client/hex-wasm/src/: hex.rs  lib.rs  mcts.rs
client/src/: App.svelte  global.css  global.d.ts  main.ts  test.svelte
client/src/components/: GameMenu.svelte  HexBoard.svelte  HexOnline.svelte  MCTSVisualization.svelte  MainMenu.svelte
client/src/hex/: DarkHex.ts  Hex.ts  HexBoard.ts  communication.ts
client/src/hex/ai/: BaseAI.ts  MCTS.ts  Miai.ts  MostWinningCellAI.ts  RandomAI.ts  Resistance.ts
server/: package.json  tsconfig.json
server/src/: main.ts
server/src/games/: hex.ts
server/src/hex/: DarkHex.ts  Hex.ts  HexBoard.ts
