[package]
name = "hex-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console"]
console = ["js-sys", "web-sys", "console_log"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_off",
] }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
console_log = { version = "0.2", features = ["color"], optional = true }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

# wasm-pack build --out-name index --dev 

# wasm-pack build --out-name index --release -- --no-default-features
# -O2 -O3 -O4 ??
# wasm-opt -O4 -o pkg/index_bg.wasm pkg/index_bg.wasm
